src/test/ui/parser/attr-bad-meta-2.stderr
error: unexpected token: `]`
  --> $DIR/attr-bad-meta-2.rs:11:9
   |
LL | #[path =] //~ ERROR unexpected token: `]`
   |         ^ unexpected token after this

error: aborting due to previous error

